# despasito

./: .gitignore  .lgtm.yml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  versioneer.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  general-issue.md  general.md
.github/workflows/: CI.yaml
UML_diagrams/: classes.dot  classes_modified.dot  packages.dot  packages_modified.dot
autosum_docs/: eos.rst  fitparams.rst  input_output.rst  modules.rst
autosum_docs/_autosummary/: despasito.equations_of_state.eos.rst  despasito.equations_of_state.interface.EOStemplate.P.rst  despasito.equations_of_state.interface.EOStemplate.chemicalpotential.rst  despasito.equations_of_state.interface.EOStemplate.parameter_refresh.rst  despasito.equations_of_state.interface.EOStemplate.rst  despasito.equations_of_state.interface.EOStemplate.update_parameters.rst  despasito.equations_of_state.jit_stat.disable_jit.rst  despasito.equations_of_state.jit_stat.rst  despasito.equations_of_state.rst  despasito.equations_of_state.saft.gamma_mie.rst  despasito.equations_of_state.saft.gamma_mie.saft_gamma_mie.P.rst  despasito.equations_of_state.saft.gamma_mie.saft_gamma_mie.chemicalpotential.rst  despasito.equations_of_state.saft.gamma_mie.saft_gamma_mie.density_max.rst  despasito.fit_parameters.fit.rst  (+35 more)
bkp_docs/: README.md  conf.py  eos.rst  fitparams.rst  thermo.rst
despasito/: __init__.py  __main__.py  _version.py  fund_constants.py  fundamental_constants.py  liquid_properties_output.txt  main.py  phase_xiT_output.txt  run.py  saturation_output.txt
devtools/: README.md
docs/: .settingup.rst.swo  Makefile  README.md  _config.yml  api.rst  conf.py  contribute_eos.rst  contribute_fitparams.rst  contribute_intro.rst  contribute_issues.rst  contribute_thermo.rst  contributors.rst  eos.rst  faqs.rst  fitparams.rst  getting_started.rst  index.rst  input_output.rst  peng-robinson.rst  requirements  run.sh  saft.rst  saft_gamma_mie.rst  settingup.rst  startfitting.rst  thermo.rst  utils.rst
orig_autosum_docs/: Makefile  index.rst  make.bat  thermo.rst
paper/: paper.bib  paper.md
scripts/: phaseplot.py
(+816 files in other folders)
